adjust header width to auto, change justify-content to space-between, add fixed position and make z-index very high for the header

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -4,8 +4,12 @@ header {
   font-size: 14px;
   font-weight: bold;
   display: flex;
-  width: 100%;
-  justify-content: flex-start;
+  width: auto;
+  justify-content: space-between;
+  margin-left: 30px;
+  margin-right: 30px;
+  position: fixed;
+  z-index: 20;
 }
 
 /*Logo Section*/
@@ -14,6 +18,7 @@ header {
   display: inline-flex;
   justify-content: center;
   align-items: center;
+
 }
 
 .logo p {
@@ -22,3 +27,11 @@ header {
 }
 
 /*Nav Section*/
+nav {
+  display: inline-flex;
+  flex-flow: column wrap;
+}
+
+.span {
+
+}
